src/test/resources/testinput/parsable/symtab/invalid_coco/Test01.ocl
/* (c) https://github.com/MontiCore/monticore */
package invariants;

ocl Test01 {
  inv(int a, int b):
    a > b &&
    a >= b &&
    a < b &&
    a <= b &&
    a == b &&
    a != b;

  inv(Integer a, Integer b):
    a > b &&
    a >= b &&
    a < b &&
    a <= b &&
    a == b &&
    a != b;
}
